--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div>Field of tulips</div>
 		</div>
 		<div>
-			<img "lavender.jpg" width="500"/>
+			<img src="images/lavender.jpg" width="500"/>
 			<div>Field of lavender</div>
 		</div>
 	</div>
